[package]
name = "epoxy-server-bun"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
napi        = { version = "2", features = ["napi4", "async", "tokio_rt"] }
napi-derive = "2"

wisp-mux = { path = "../../mux", features = ["tokio-tungstenite"] }

tokio            = { version = "1", features = ["net", "io-util", "sync", "rt", "macros"] }
tokio-tungstenite = { version = "0.27.0", features = ["stream"] }
tokio-util       = { version = "0.7", features = ["compat"] }
futures          = { version = "0.3", default-features = false, features = ["std", "async-await"] }
bytes            = "1"

[build-dependencies]
napi-build = "2"

[profile.release]
lto           = true
codegen-units = 1
opt-level     = 3
panic         = "abort"